--- a/BuildSchool-remake/style.css
+++ b/BuildSchool-remake/style.css
@@ -5,6 +5,49 @@
     font-family: "微軟正黑體", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+#toTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    text-decoration: none;
+    width: 60px;
+    height: 60px;
+    z-index: 10;
+    border-radius: 50px;
+    box-shadow: 0 2px 8px 0 #999595;
+}
+
+#toTop:hover{
+    box-shadow: 0 4px 10px 0 #999595;
+}
+
+#toTop img {
+    width: 100%;
+}
+
+#toChat{
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    text-decoration: none;
+    width: 60px;
+    height: 60px;
+    z-index: 10;
+    text-align: center;
+    border-radius: 50px;
+    background: #008AFC;
+    box-shadow: 0 2px 8px 0 #999595;
+    color: #fff;
+    line-height: 60px;
+    font-size: 12px;
+    transition: .5s;
+    opacity: 0;
+}
+
+#menu-control:checked~ #toChat{
+    opacity: 0;
+}
+
 #menu-control {
     display: none;
 }
@@ -243,7 +286,9 @@ footer .text-area2 a {
 }
 
 @media screen and (max-width: 991px) {
-   
+    #toChat{
+        opacity: 1;
+    }
 
     .logo-group {
         display: flex;
@@ -271,6 +316,8 @@ footer .text-area2 a {
     #menu-control:checked ~ .main-header .hb {
         z-index: 999;
     }
+
+    
 
     .hb-btn span {
         width: 32px;
@@ -334,14 +381,16 @@ footer .text-area2 a {
         border-bottom: 0.5px solid #e9e9e9;
     }
 
-   
-
     #menu-control:checked ~ .main-header .nav {
         right: 0;
     }
 }
 
 @media screen and (min-width: 992px) {
+
+   
+
+
     .main-header .container {
         display: flex;
         justify-content: space-between;
@@ -365,11 +414,11 @@ footer .text-area2 a {
         color: #fff;
         font-size: 14px;
         text-decoration: none;
-        transition: .5s;
+        transition: 0.5s;
     }
 
-    .nav a:hover{
-        color:cadetblue;
+    .nav a:hover {
+        color: cadetblue;
     }
 
     .features-block .reverse {
