--- a/BuildSchool-remake/style.css
+++ b/BuildSchool-remake/style.css
@@ -5,7 +5,7 @@
     font-family: "微軟正黑體", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-#toTop {
+#FBMessager {
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -17,15 +17,16 @@
     box-shadow: 0 2px 8px 0 #999595;
 }
 
-#toTop:hover {
+#FBMessager:hover {
     box-shadow: 0 4px 10px 0 #999595;
 }
 
-#toTop img {
+#FBMessager img,
+#ScrolltoTop img {
     width: 100%;
 }
 
-#toChat {
+#ToChat {
     position: fixed;
     bottom: 20px;
     left: 20px;
@@ -41,10 +42,22 @@
     line-height: 60px;
     font-size: 12px;
     transition: 0.5s;
-    opacity: 0;
+    display: none;
 }
 
-#menu-control:checked ~ #toChat {
+#ScrolltoTop {
+    width: 24px;
+    height: 24px;
+    right: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.1);
+    bottom: 88px;
+    display: none;
+    padding: 10px;
+    transition: 0.5s;
+}
+
+#menu-control:checked ~ #ToChat {
     opacity: 0;
 }
 
@@ -86,57 +99,113 @@
     z-index: 0 !important;
 }
 
-.swiper-slide .slide-bg{
+.swiper-slide .slide-bg {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 700px;
+    position: relative;
 }
 
-.slide-bg.bg1{
+.black-mask{
+    content: ''; 
+    display: block; 
+    position: absolute; 
+    background-color: #000; 
+    opacity: 0.5; 
+    width: 100%; 
+    height: 100%; 
+}
+
+.slide-bg.bg1 {
     background-image: url("img/slide1.png");
 }
 
-.slide-bg.bg2{
+.slide-bg.bg2 {
     background-image: url("img/slide2.png");
 }
 
-.slide-bg.bg3{
+.slide-bg.bg3 {
     background-image: url("img/slide3.png");
 }
 
-.slide-bg.bg4{
+.slide-bg.bg4 {
     background-image: url("img/slide4.png");
 }
 
-.slide-bg.bg5{
+.slide-bg.bg5 {
     background-image: url("img/slide5.png");
 }
 
-.slide-bg.bg6{
+.slide-bg.bg6 {
     background-image: url("img/slide6.png");
 }
 
-.slide-bg.bg7{
+.slide-bg.bg7 {
     background-image: url("img/slide7.png");
 }
 
-.slide-bg.bg8{
+.slide-bg.bg8 {
     background-image: url("img/slide8.png");
 }
 
-.slide-bg.bg9{
+.slide-bg.bg9 {
     background-image: url("img/slide9.png");
 }
 
-.swiper-pagination{
+.slide-bg .textarea {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+
+.slide-bg .textarea h2{
+    font-size: 77px;
+}
+
+.slide-bg .textarea h4{
+    font-size: 37px;
+}
+
+.slide-bg .textarea p{
+    font-size: 20px;
+}
+
+.slide-bg .textarea .btn-group ul {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 100px;
+}
+
+.slide-bg .textarea .btn-group ul li{
+    padding: 20px;
+}
+
+.slide-bg .textarea .btn-group ul a{
+    padding: 15px;
+    text-decoration: none;
+    color: #fff;
+    background-color: rgba(55,110,164,0.6);
+    transition: .4s;
+}
+
+.slide-bg .textarea .btn-group ul a:hover{
+    background-color: rgba(55,110,164,1);
+}
+
+.swiper-pagination {
     bottom: 40px !important;
 }
 
-.swiper-button-next{
+.swiper-button-next {
     right: 20px !important;
 }
-.swiper-button-prev{
+.swiper-button-prev {
     left: 20px !important;
 }
 
@@ -196,11 +265,11 @@
 }
 
 .banner .banner-title {
-    padding: 20px
+    padding: 30px 20px;
     text-align: center;
     letter-spacing: 0.15em;
     color: #fff;
-    font-size: 22px;
+    font-size: 24px;
     filter: brightness(1);
     font-weight: bold;
 }
@@ -302,6 +371,7 @@ footer {
     border-top: 4px solid #ccc;
     letter-spacing: 1px;
     line-height: 1.5;
+    position: relative;
 }
 
 footer .row {
@@ -332,10 +402,19 @@ footer .text-area2 a {
     color: #000;
     font-weight: bold;
 }
+footer .footer-toTop {
+    width: 46px;
+    height: 24px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 @media screen and (max-width: 991px) {
-    #toChat {
-        opacity: 1;
+    #ToChat,
+    #ScrolltoTop {
+        display: block;
     }
 
     .logo-group {
@@ -431,8 +510,25 @@ footer .text-area2 a {
         right: 0;
     }
 
-    .swiper-slide .slide-bg{
+    .swiper-slide .slide-bg {
         height: 550px;
+    }
+
+    .slide-bg .textarea .btn-group ul {
+        flex-direction: column;
+        padding-top: 50px;
+        
+    }
+
+    .slide-bg .textarea h2 {
+        font-size: 48px;
+    }
+    .slide-bg .textarea h4 {
+        font-size: 32px;
+    }
+
+    .slide-bg .textarea p {
+        font-size: 18px;
     }
 }
 
@@ -470,5 +566,4 @@ footer .text-area2 a {
     .features-block .reverse {
         flex-direction: row-reverse;
     }
-
 }
