--- a/TAKEN/scss/style.scss
+++ b/TAKEN/scss/style.scss
@@ -121,18 +121,27 @@
         margin-bottom: 15px;
         .description {
             opacity: 0;
-            top: 40%;
+            top: 20%;
             left: 0;
             width: 100%;
             line-height: 1.8;
             transition: 0.3s;
-            h6{
-                font-size: 16px;
+            @media screen and (min-width: 768px) {
+                top: 30%;
+            }
+            h6 {
+                font-size: 14px;
+                @media screen and (min-width: 768px) {
+                    font-size: 16px;
+                }
             }
             p {
                 margin: 0;
                 font-weight: bold;
                 font-size: 14px;
+                @media screen and (min-width: 768px) {
+                    font-size: 14px;
+                }
             }
         }
         &:hover .description {
@@ -154,16 +163,26 @@
     background-attachment: fixed;
     background-position: 50% 50%;
     background-size: cover;
-    height: 500px;
+    height: 250px;
+    @media screen and (min-width: 768px) {
+        height: 500px;
+    }
     h2 {
-        margin-top: 100px;
-        font-size: 120px;
+        margin-top: 50px;
+        font-size: 44px;
         color: #fff;
         line-height: 1.8;
+        @media screen and (min-width: 768px) {
+            margin-top: 100px;
+            font-size: 120px;
+        }
     }
     p {
-        font-size: 45px;
+        font-size: 20px;
         color: #fff;
+        @media screen and (min-width: 768px) {
+            font-size: 45px;
+        }
     }
 }
 
@@ -201,22 +220,21 @@
         p {
             margin: 0;
             line-height: 1.8;
-            a{
-                transition: .3s;
+            a {
+                transition: 0.3s;
                 color: #cac7c7;
                 img {
                     height: 24px;
                     margin: 0 2px;
                     opacity: 1;
                 }
-                &:hover{
+                &:hover {
                     color: #fff !important;
                 }
-                &:hover img{
-                    opacity: .5;
+                &:hover img {
+                    opacity: 0.5;
                 }
             }
-           
         }
     }
     a {
@@ -229,7 +247,7 @@
     font-size: 13px;
     a {
         text-decoration: none;
-        transition: .3s;
+        transition: 0.3s;
         &:hover {
             color: #fff !important;
         }
