--- a/1A2B/style.css
+++ b/1A2B/style.css
@@ -6,9 +6,10 @@
 
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab, green, yellow);
-    background-size: 1000% 1000%;
+    background-size: 1000%;
     animation: gradient 15s ease-in-out infinite;
     font-family: 'Noto Sans TC', sans-serif;
+    height: 100vh;
 }
 
 @keyframes gradient {
