--- a/Calendar/style.css
+++ b/Calendar/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(to bottom, #fff 0%, #9ee8fa 100%);
+    background-image: linear-gradient(180deg, #fff 0%, #9ee8fa 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -14,6 +14,26 @@ body {
 #map {
     height: 350px;
     width: 350px;
+}
+
+#clock {
+    background-image: linear-gradient(90deg, #f00, #ff0, #0f0, #0ff, #00f);
+    -webkit-background-clip: text;
+    color: transparent;
+    background-size: 1000%;
+    animation: animate 15s infinite linear;
+}
+
+@keyframes animate {
+    0% {
+        background-position: 0% 100%;
+    }
+    50% {
+        background-position: 100% 0%;
+    }
+    100% {
+        background-position: 0% 100%;
+    }
 }
 
 h2.text-info {
