--- a/Calendar/style.css
+++ b/Calendar/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 #map {
-    height: 350px;
-    width: 350px;
+    height: 320px;
+    width: 320px;
 }
 
 #clock {
@@ -62,4 +62,11 @@ h2.text-info {
 .dayBlock {
     height: 120px;
     width: 120px;
+}
+
+@media screen and (max-width: 576px) {
+    .dayBlock{
+        height: 40px;
+        width: 40px;
+    }
 }
