--- a/Sliding-Puzzle-Game/style.css
+++ b/Sliding-Puzzle-Game/style.css
@@ -5,7 +5,7 @@
     font-family: "Noto Sans TC", sans-serif;
 }
 
-body{
+body {
     background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -27,10 +27,16 @@ body{
     cursor: pointer;
 }
 
+.custom-file-input:lang(en) ~ .custom-file-label::after {
+    content: "瀏覽";
+    background-color: #6a85b6;
+    color: #fff;
+}
+
 .empty {
     opacity: 0;
 }
 
-.form-check-label{
+.form-check-label {
     letter-spacing: 1px;
 }
